test/Spectre.Console.Cli.Tests/Expectations/Parsing/CannotAssignValueToFlag/Test_1.Output.verified.txt
Error: Flags cannot be assigned a value.

       dog --alive=indeterminate foo
           ^^^^^^^ Can't assign value